--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -29,6 +29,7 @@
                     <canvas id="userMeterChart"></canvas>
                     <div class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-center">
                         <p class="text-3xl font-bold text-white"><%= discordStats.totalMembers %></p>
+                        <p class="text-sm text-gray-400">Discord Members</p>
                     </div>
                 </div>
                 <div class="mt-4 grid grid-cols-2 gap-4">
