--- a/views/media.ejs
+++ b/views/media.ejs
@@ -141,7 +141,7 @@
                                 </form>
                             <% } else { %>
                                 <p class="text-sm text-gray-400 text-center">
-                                    <a href="/auth/discord" class="text-emerald-400 hover:text-emerald-300">Login</a> to join the conversation
+                                    <a href="/login" class="text-emerald-400 hover:text-emerald-300">Login</a> to join the conversation
                                 </p>
                             <% } %>
                         </div>
